Added map data structure and formatting and sanitiation of undirected weighted graphs

--- a/Minimum_Spanning_Tree/CMakeLists.txt
+++ b/Minimum_Spanning_Tree/CMakeLists.txt
@@ -2,4 +2,5 @@ add_executable(kruskal kruskal.c)
 
 target_link_libraries(kruskal
     format_file
-    undirected_graph)
+    undirected_graph
+    map)
