Implementation of Kruskal, Filter-Kruskal

--- a/Minimum_Spanning_Tree/CMakeLists.txt
+++ b/Minimum_Spanning_Tree/CMakeLists.txt
@@ -3,4 +3,5 @@ add_executable(kruskal kruskal.c)
 target_link_libraries(kruskal
     format_file
     undirected_graph
-    map)
+    map
+    disjoint_sets)
