Parallel filter kruskal implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(parallelizing_graphs)
 
+find_package(OpenMP REQUIRED)
 add_subdirectory(Minimum_Spanning_Tree)
 
 add_subdirectory(Utilities)
