Modify MST code

--- a/Minimum_Spanning_Tree/CMakeLists.txt
+++ b/Minimum_Spanning_Tree/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(kruskal kruskal.c)
 add_executable(parallel_kruskal parallel_kruskal.c)
+add_executable(helper helper.c)
 
 target_link_libraries(kruskal
     format_file
@@ -13,3 +14,6 @@ target_link_libraries(parallel_kruskal
     map
     disjoint_sets
     OpenMP::OpenMP_C)
+
+target_link_libraries(helper
+    generate_graph)
