--- a/Utilities/format_file/CMakeLists.txt
+++ b/Utilities/format_file/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(format_file format_file.c format_file.h)
+add_library(generate_graph generate_graph.c generate_graph.h)
 
 target_link_libraries(format_file
     map)
