--- a/Utilities/format_file/CMakeLists.txt
+++ b/Utilities/format_file/CMakeLists.txt
@@ -3,3 +3,6 @@ add_library(generate_graph generate_graph.c generate_graph.h)
 
 target_link_libraries(format_file
     map)
+
+target_link_libraries(generate_graph
+    format_file)
