--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(parallelizing_graphs)
 
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3 -ggdb")
+
 find_package(OpenMP REQUIRED)
+add_subdirectory(Maximum_Matching)
 add_subdirectory(Minimum_Spanning_Tree)
 add_subdirectory(Strongly_Connected_Components)
 
