--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "unordered_set": "c",
         "vector": "c",
         "ostream": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "map.h": "c"
     }
 }
