--- a/Minimum_Spanning_Tree/CMakeLists.txt
+++ b/Minimum_Spanning_Tree/CMakeLists.txt
@@ -2,6 +2,9 @@ add_executable(kruskal kruskal.c)
 add_executable(parallel_kruskal parallel_kruskal.c)
 add_executable(helper helper.c)
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
 target_link_libraries(kruskal
     format_file
     undirected_graph
@@ -13,7 +16,8 @@ target_link_libraries(parallel_kruskal
     undirected_graph
     map
     disjoint_sets
-    OpenMP::OpenMP_C)
+    OpenMP::OpenMP_C
+    Threads::Threads)
 
 target_link_libraries(helper
     generate_graph)
