--- a/Utilities/Graphs/CMakeLists.txt
+++ b/Utilities/Graphs/CMakeLists.txt
@@ -3,4 +3,6 @@ add_library(directed_graph directed_graph.c directed_graph.h)
 add_library(bipartite_graph bipartite_graph.c bipartite_graph.h)
 
 target_link_libraries(bipartite_graph
-    map)
+    map
+    OpenMP::OpenMP_C
+    Threads::Threads)
